# spell-checker-api

./: Cargo.toml  README.md
src/: handlers.rs  main.rs
