[package]
name = "spell_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
rocket = "0.5.0-rc.2"
parking_lot = "0.10.0"
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }